<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_main"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/dashboardScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/content_bottom_safe"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/space_lg"
            android:paddingTop="@dimen/space_xl"
            android:paddingBottom="@dimen/space_xxl">

            <TextView
                android:id="@+id/txtMainTitle"
                style="@style/Text.Display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/txtMainSubtitle"
                style="@style/Text.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:text="@string/main_subtitle" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHero"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginTop="@dimen/space_lg"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/radius_xl"
                app:cardElevation="@dimen/elev_md"
                app:strokeColor="@color/neon_blue"
                app:strokeWidth="@dimen/stroke_glass">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_glass_card"
                    android:padding="@dimen/space_md">

                    <TextView
                        android:id="@+id/txtHeroTitle"
                        style="@style/Text.Headline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/main_dashboard_title"
                        app:layout_constraintEnd_toStartOf="@id/imgHeroOrb"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtHeroSubtitle"
                        style="@style/Text.Caption"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:maxLines="2"
                        android:text="@string/main_dashboard_subtitle"
                        app:layout_constraintEnd_toStartOf="@id/imgHeroOrb"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtHeroTitle" />

                    <View
                        android:id="@+id/heroAccent"
                        android:layout_width="96dp"
                        android:layout_height="5dp"
                        android:layout_marginTop="@dimen/space_md"
                        android:background="@drawable/bg_neon_gradient"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtHeroSubtitle" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgHeroOrb"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:background="@drawable/moviqoplay"
                        android:padding="18dp"
                        android:src="@drawable/ic_recommendation"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                        app:tint="@color/black_elevated" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/main_dashboard_menu" />

            <GridLayout
                android:id="@+id/dashboardGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:useDefaultMargins="false">

                <include layout="@layout/view_dashboard_home" />
                <include layout="@layout/view_dashboard_music" />
                <include layout="@layout/view_dashboard_video" />
                <include layout="@layout/view_dashboard_playlist" />
                <include layout="@layout/view_dashboard_search" />
                <include layout="@layout/view_dashboard_equalizer" />
                <include layout="@layout/view_dashboard_settings" />
                <include layout="@layout/view_dashboard_profile" />
                <include layout="@layout/view_dashboard_recommendation" />
            </GridLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
